#+title: Change Log for ollama-buddy
#+author: James Dyer
#+email: captainflasmr@gmail.com
#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for each tagged commit on the
project's main git repository: [[https://github.com/captainflasmr/ollama-buddy

* Versions

** <2025-05-22> *0.12.0*

Full system prompt in the status bar replaced with a more meaningful simple role title

- Added system prompt metadata tracking with title, source, and timestamp registry
- Implemented automatic title extraction and unified completing-read interface
- Enhanced fabric/awesome prompt integration with proper metadata handling
- Improved transient menu organization and org-mode formatting with folding
- Added system prompt history display and better error handling for empty files
- Transient menu has been simplified and reorganised

** <2025-05-21> *0.11.1*

Quite a bit of refactoring to generally make this project more maintainable and I have added a starter kit of user prompts.

- Color System Reworking
  - Removed all model color-related functions and variables
  - Removed dependency on =color.el=
  - Replaced with =highlight-regexp= and hashing to =^font-lock= faces, so now using a more native built-in solutions for model colouring rather than shoe-horning in overlays.

- UI Improvements
  - Simplified the display system by leveraging Org mode
  - Added org-mode styling for output buffers
  - Added =org-hide-emphasis-markers= and =org-hide-leading-stars= settings
  - Changed formatting to use Org markup instead of text properties
  - Converted plain text headers to proper Org headings
  - Replaced color properties with Org emphasis (bold)

- History Management Updates
  - Streamlined history editing functionality
  - Improved model-specific history editing
  - Refactored history display and navigation

- System Prompts