@@ -96,6 +96,14 @@ See *Screenshots / Demos* section for more videos/demonstration.
 
 * Whats New
 
+** <2025-05-31> *0.12.1*
+
+Optimized Unicode escape function to fix blocking with large file attachments
+
+- Fixed UI blocking when sending large attached files
+- Used temp buffer with delete-char/insert instead of repeated concat calls
+- Reduced processing time from minutes to milliseconds for large payloads
+
 ** <2025-05-22> *0.12.0*
 
 Full system prompt in the status bar replaced with a more meaningful simple role title
@@ -2421,60 +2429,44 @@ All interactive functions available in ollama-buddy are listed in the original R
 #+end_src
 
 #+RESULTS:
-| TODO                                                                         | DOING                                                  | DONE                                                                  |
-|------------------------------------------------------------------------------+--------------------------------------------------------+-----------------------------------------------------------------------|
-| allow switch to remote LLMs even when ollama not running                     | Kill online AI process with cancel request             | Vision image with spaces not processed as image                       |
-| Modifying a parameter internal defaults would flag as not modified           | GGUF to use new syncing option                         | Save system prompts as part of session                                |
-| transient-setup: Key sequence 1 0 starts with non-prefix key 1               | sometimes chat output with filter is getting clobbered | chat ollama names to include prefix                                   |
-| No streaming with hiding reasoning corrupts output                           |                                                        | Still some encoding issues on returns from online AI                  |
-| Claude request and connection can sometimes take time and it blocks!         |                                                        | Conversation history to display with Claude/ChatGPT                   |
-| Pushing hundreds or even thousands of lines to the chat buffer takes a while |                                                        | I think some hard coded Claude models currently don't work            |
-| ChatGPT request/response too long                                            |                                                        | register contents to be converted to org, currently it is in markdown |
-| Check tags caching                                                           |                                                        | =C-a= beginning-of-line to jump to prompt start like comint           |
-| keybindings in ollama chat buffer are reserved                               |                                                        | As shell generally C-n to end of list to clear prompt history         |
-|                                                                              |                                                        | Add Texinfo to MELPA recipe                                           |
-|                                                                              |                                                        | System prompt not cleared on new session                              |
-|                                                                              |                                                        | Remove fabric from Commands transient menu                            |
-|                                                                              |                                                        | External AI to copy to register                                       |
-|                                                                              |                                                        | First request with no chat buffer fails                               |
+| TODO                                                                         | DOING                                      | DONE                                                                  |
+|------------------------------------------------------------------------------+--------------------------------------------+-----------------------------------------------------------------------|
+| GGUF to be asynchronous                                                      | Kill online AI process with cancel request | Claude request and connection can sometimes take time and it blocks!  |
+| Better attachment signalling                                                 |                                            | allow switch to remote LLMs even when ollama not running              |
+| Modifying a parameter internal defaults would flag as not modified           |                                            | Vision image with spaces not processed as image                       |
+| No streaming with hiding reasoning corrupts output                           |                                            | Save system prompts as part of session                                |
+| Pushing hundreds or even thousands of lines to the chat buffer takes a while |                                            | chat ollama names to include prefix                                   |
+| Check tags caching                                                           |                                            | Still some encoding issues on returns from online AI                  |
+| keybindings in ollama chat buffer are reserved                               |                                            | Conversation history to display with Claude/ChatGPT                   |
+|                                                                              |                                            | I think some hard coded Claude models currently don't work            |
+|                                                                              |                                            | register contents to be converted to org, currently it is in markdown |
+|                                                                              |                                            | =C-a= beginning-of-line to jump to prompt start like comint           |
+|                                                                              |                                            | As shell generally C-n to end of list to clear prompt history         |
+|                                                                              |                                            | Add Texinfo to MELPA recipe                                           |
+|                                                                              |                                            | System prompt not cleared on new session                              |
+|                                                                              |                                            | Remove fabric from Commands transient menu                            |
+|                                                                              |                                            | External AI to copy to register                                       |
+|                                                                              |                                            | First request with no chat buffer fails                               |
 
-** DOING Kill online AI process with cancel request
+** TODO GGUF to be asynchronous
 
-** DOING GGUF to use new syncing option
-
-For some reason this is more difficult than it looks
-
-** DOING sometimes chat output with filter is getting clobbered
-
-** TODO allow switch to remote LLMs even when ollama not running
+** TODO Better attachment signalling
 
 ** TODO Modifying a parameter internal defaults would flag as not modified
 
-** TODO transient-setup: Key sequence 1 0 starts with non-prefix key 1
-
 ** TODO No streaming with hiding reasoning corrupts output
 
-** TODO Claude request and connection can sometimes take time and it blocks!
-
 ** TODO Pushing hundreds or even thousands of lines to the chat buffer takes a while
-
-For example large diffs, although a 4000 lines diff is unusual?
-
-** TODO ChatGPT request/response too long
-
-[GPT gpt-3.5-turbo: RESPONSE]
-
-Error: This model's maximum context length is 16385 tokens. However, you requested 20189 tokens (16093 in the messages, 4096 in the completion). Please reduce the length of the messages or completion.
 
 ** TODO Check tags caching
 
 ** TODO keybindings in ollama chat buffer are reserved
 
-#+begin_src 
-2647:70: error: This key sequence is reserved (see Key Binding Conventions in the Emacs Lisp manual)
-#+end_src
+** DOING Kill online AI process with cancel request
 
-Do I even care?
+** DONE Claude request and connection can sometimes take time and it blocks!
+
+** DONE allow switch to remote LLMs even when ollama not running
 
 ** DONE Vision image with spaces not processed as image
 
